[tool.poetry]
name = "hyperspace-navigator-streamlit"
version = "0.1.0"
description = ""
authors = ["jalakoo <jalakoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
matplotlib = "^3.8.4"
openai = "^1.24.0"
neo4j = "^5.20.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
